chore: 🔧 (website/tsconfig) 不要なパスエイリアスを削除
hoge

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -6,8 +6,7 @@
     "paths": {
       "~website/*": ["./*"],
       "#website/*": ["./src/*"],
-      "#core/*": ["../../packages/core/*"],
-      "#markdown/*": ["../../packages/markdown/*"]
+      "#core/*": ["../../packages/core/*"]
     }
   },
   "include": ["./src/**/*", "./*.*js", "./*.*ts", ".next/types/**/*.*ts", ".next/types/**/*.ts"],
