--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
     "fmt:fix": "prettier --write .",
     "test": "cross-env NODE_ENV=test jest --silent=false --verbose false --passWithNoTests",
     "db:generate": "drizzle-kit generate:pg --config ./drizzle.config.ts",
+    "db:pull:dev": "cross-env NODE_ENV=development drizzle-kit generate:pg --config ./drizzle.config.ts",
     "db:push:dev": "cross-env NODE_ENV=development drizzle-kit push:pg --config ./drizzle.config.ts",
     "db:push:prod": "cross-env NODE_ENV=production drizzle-kit push:pg --config ./drizzle.config.ts",
     "db:push:test": "cross-env NODE_ENV=test drizzle-kit push:pg --config ./drizzle.config.ts",
@@ -29,9 +30,9 @@
     "apollo:rover": "rover graph publish lockerai@current --schema ./schema.gql"
   },
   "dependencies": {
-    "@apollo/server": "4.9.4",
+    "@apollo/server": "4.9.5",
     "@nestjs/apollo": "12.0.9",
-    "@nestjs/cli": "10.1.18",
+    "@nestjs/cli": "10.2.0",
     "@nestjs/common": "10.2.7",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.2.7",
@@ -45,12 +46,12 @@
     "drizzle-orm": "0.28.6",
     "graphql-subscriptions": "2.0.0",
     "graphql-validation-complexity": "0.4.2",
-    "postgres": "3.4.0",
+    "postgres": "3.4.2",
     "ts-pattern": "5.0.5",
     "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@apollo/rover": "0.20.0",
+    "@apollo/rover": "0.21.0",
     "@lockerai/jest": "workspace:*",
     "@lockerai/postcss": "workspace:*",
     "@lockerai/prettier": "workspace:*",
