--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@lockerai/design-token": "workspace:*",
     "@lockerai/tailwind": "workspace:*",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-select": "2.0.0",
     "date-fns": "2.30.0",
     "date-fns-tz": "2.0.0",
     "dotenv": "16.3.1",
     "framer-motion": "10.16.4",
-    "next": "13.5.6",
+    "next": "14.0.0",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,7 +37,7 @@
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
     "@storybook/react": "7.5.1",
-    "@types/react": "18.2.31",
+    "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "eslint-config-lockerai-react": "workspace:*"
   }
