--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -16,7 +16,7 @@
     "clsx": "2.0.0",
     "dotenv": "16.3.1",
     "tailwind-merge": "1.14.0",
-    "tailwind-variants": "0.1.14"
+    "tailwind-variants": "0.1.17"
   },
   "devDependencies": {
     "@lockerai/design-token": "workspace:*",
@@ -31,8 +31,9 @@
     "mini-svg-data-uri": "1.4.4",
     "postcss": "8.4.31",
     "postcss-import": "15.1.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "3.3.5",
     "tailwindcss-animate": "1.0.7",
-    "tw-colors": "3.0.3"
+    "tailwindcss-radix": "2.8.0",
+    "tw-colors": "3.2.0"
   }
 }
