--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/eslint": "8.44.6",
     "@types/jest": "29.5.6",
-    "@types/node": "20.8.7",
+    "@types/node": "20.8.9",
     "cross-env": "7.0.3",
     "dotenv-cli": "7.3.0",
     "eslint": "8.52.0",
@@ -38,5 +38,10 @@
     "ts-node": "10.9.1",
     "turbo": "1.10.16",
     "typescript": "5.2.2"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "tailwind-variants@0.1.17": "patches/tailwind-variants@0.1.17.patch"
+    }
   }
 }
