--- a/.github/workflows/db-push-migration.yaml
+++ b/.github/workflows/db-push-migration.yaml
@@ -1,4 +1,10 @@
-name: db commit migration
+name: db push migration
+
+# TODO: uncomment this
+# on:
+#   push:
+#     branches:
+#       - main
 
 on: push
 
@@ -31,7 +37,7 @@ jobs:
           token: ${{ github.token }}
           filters: .github/filter.yaml
 
-  commit:
+  push:
     runs-on: ubuntu-latest
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
@@ -82,38 +88,24 @@ jobs:
       - name: authenticate to supabase
         run: pnpm supabase link --project-ref ${{ secrets.SUPABASE_REFERENCE_ID }}
 
-      - name: update migration file
-        run: echo y | (pnpm supabase db pull --schema public && pnpm supabase migration squash)
-        continue-on-error: true
+      - name: start local supabase
+        run: pnpm supabase start
 
-      - name: commit migration file update
+      - name: push migration file to local db
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          if git diff --name-only --diff-filter=D | grep -q "supabase/migrations/.*_remote_schema.sql"; then \
-            git add $(git diff --name-only --diff-filter=D); \
-            OLD_VERSION=$(git diff --name-only --diff-filter=D --staged | grep "supabase/migrations/.*_remote_schema.sql" | cut -d/ -f3 | cut -d_ -f1); \
-            git add supabase/migrations/*_remote_schema.sql -N; \
-            NEW_VERSION=$(git diff --name-only --diff-filter=A | grep "supabase/migrations/.*_remote_schema.sql" | cut -d/ -f3 | cut -d_ -f1); \
-            pnpm supabase migration repair ${OLD_VERSION} --status reverted; \
-            pnpm supabase migration repair ${NEW_VERSION} --status reverted; \
-            pnpm supabase migration repair ${NEW_VERSION} --status applied; \
-            git add supabase/migrations/*_remote_schema.sql; \
-            git commit -m "actions: 🤖 (supabase) updated migration file"; \
-            git push origin HEAD:${GITHUB_REF} --force; \
-            echo "Committed changes to migration history"; \
-          elif ls "./supabase/migrations" | grep ".*_remote_schema.sql"; then \
-            git add supabase/migrations/*_remote_schema.sql; \
-            git commit -m "actions: 🤖 (supabase) created migration file"; \
-            git push origin HEAD:${GITHUB_REF} --force; \
-            echo "Committed changes to migration history"; \
-          else \
-            echo "No changes detected in migration history"; \
-          fi
+          mkdir -p ./supabase/migrations/
+          cp -r ./apps/api/src/infra/drizzle/migrations/*.sql ./supabase/migrations/
+          pnpm supabase db reset
 
-  db-commit-migration-check:
+      - name: lint local db
+        run: pnpm supabase db lint
+
+      - name: push migration file to remote db
+        run: pnpm supabase db push
+
+  db-push-migration-check:
     runs-on: ubuntu-latest
-    needs: commit
+    needs: push
     if: ${{ ! failure() }}
     steps:
       - name: check
