--- a/.github/workflows/graphql-deploy-apollo-studio.yaml
+++ b/.github/workflows/graphql-deploy-apollo-studio.yaml
@@ -71,7 +71,7 @@ jobs:
       - name: publish graphs
         run: pnpm api apollo:rover
 
-  app-test-check:
+  graphql-deploy-apollo-check:
     runs-on: ubuntu-latest
     needs: deploy-apollo-studio
     if: ${{ ! failure() }}
