--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -25,13 +25,14 @@
     "@lockerai/design-token": "workspace:*",
     "@lockerai/tailwind": "workspace:*",
     "@lockerai/urql": "workspace:*",
-    "@supabase/auth-helpers-nextjs": "0.8.2",
+    "@supabase/auth-helpers-nextjs": "0.8.4",
     "@supabase/auth-helpers-react": "0.4.2",
     "@supabase/supabase-js": "2.38.4",
+    "@urql/next": "1.1.0",
     "dotenv": "16.3.1",
     "framer-motion": "10.16.4",
     "graphql-tag": "2.12.6",
-    "next": "14.0.0",
+    "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "schema-dts": "1.1.2",
@@ -51,7 +52,7 @@
     "@lockerai/stylelint": "workspace:*",
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
-    "@storybook/react": "7.5.1",
+    "@storybook/react": "7.5.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "eslint-config-lockerai-nextjs": "workspace:*"
