chore: 🔧 (vscode) prisma.prisma を extensions に追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,6 +28,7 @@
         "mikestead.dotenv",
         "ms-ossdata.vscode-postgresql",
         "orta.vscode-jest",
+        "prisma.prisma",
         "Prettier-SQL.SQLFlavourOverride",
         "stylelint.vscode-stylelint",
         "usernamehw.errorlens",
