--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,25 +30,22 @@
   },
   "dependencies": {
     "@apollo/server": "4.9.5",
-    "@nestjs/apollo": "12.0.9",
+    "@nestjs/apollo": "12.0.11",
     "@nestjs/cli": "10.2.1",
-    "@nestjs/common": "10.2.7",
+    "@nestjs/common": "10.2.10",
     "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.7",
-    "@nestjs/graphql": "12.0.9",
-    "@nestjs/platform-express": "10.2.7",
-    "@nestjs/testing": "10.2.7",
+    "@nestjs/core": "10.2.10",
+    "@nestjs/graphql": "12.0.11",
+    "@nestjs/platform-express": "10.2.10",
+    "@nestjs/testing": "10.2.10",
     "@prisma/client": "5.6.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dataloader": "2.2.2",
     "dotenv": "16.3.1",
-    "drizzle-orm": "0.28.6",
     "graphql-subscriptions": "2.0.0",
     "graphql-validation-complexity": "0.4.2",
-    "postgres": "3.4.2",
-    "ts-pattern": "5.0.5",
-    "uuid": "9.0.1"
+    "ts-pattern": "5.0.5"
   },
   "devDependencies": {
     "@apollo/rover": "0.21.0",
@@ -59,11 +56,9 @@
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
     "@nestjs/schematics": "10.0.3",
-    "@types/graphql-validation-complexity": "0.4.3",
-    "@types/pg": "8.10.7",
-    "drizzle-kit": "0.19.13",
+    "@types/graphql-validation-complexity": "0.4.4",
+    "@types/pg": "8.10.9",
     "eslint-config-lockerai-node": "workspace:*",
-    "pg": "8.11.3",
     "prisma": "5.6.0"
   }
 }
