--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "module": "nodenext",
   "scripts": {
-    "generate": "graphql-codegen --config codegen.ts -r dotenv/config",
+    "generate": "pnpm gql:generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -18,6 +18,7 @@
     "style": "stylelint ./**/*.{css,scss}",
     "style:fix": "stylelint ./**/*.{css,scss} --fix",
     "test": "jest --silent=false --verbose false --passWithNoTests",
+    "gql:generate": "graphql-codegen --config codegen.ts -r dotenv/config",
     "gql:introspect": "graphql-codegen --config codegen-introspect.ts -r dotenv/config"
   },
   "dependencies": {
@@ -25,14 +26,14 @@
     "@lockerai/design-token": "workspace:*",
     "@lockerai/tailwind": "workspace:*",
     "@lockerai/urql": "workspace:*",
-    "@supabase/auth-helpers-nextjs": "0.8.4",
+    "@supabase/auth-helpers-nextjs": "0.8.7",
     "@supabase/auth-helpers-react": "0.4.2",
-    "@supabase/supabase-js": "2.38.4",
+    "@supabase/supabase-js": "2.38.5",
     "@urql/next": "1.1.0",
     "dotenv": "16.3.1",
-    "framer-motion": "10.16.4",
+    "framer-motion": "10.16.5",
     "graphql-tag": "2.12.6",
-    "next": "14.0.1",
+    "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "schema-dts": "1.1.2",
@@ -52,9 +53,9 @@
     "@lockerai/stylelint": "workspace:*",
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
-    "@storybook/react": "7.5.2",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@storybook/react": "7.5.3",
+    "@types/react": "18.2.39",
+    "@types/react-dom": "18.2.17",
     "eslint-config-lockerai-nextjs": "workspace:*"
   }
 }
