--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "node": ">=18.0.0 <19",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.9.2",
+  "packageManager": "pnpm@8.11.0",
   "volta": {
     "node": "18.18.2",
-    "pnpm": "8.9.2"
+    "pnpm": "8.11.0"
   },
   "scripts": {
     "prepare": "husky install",
@@ -21,25 +21,28 @@
     "website": "pnpm --filter @lockerai/website"
   },
   "devDependencies": {
-    "@types/eslint": "8.44.6",
-    "@types/jest": "29.5.7",
-    "@types/node": "20.8.10",
+    "@types/eslint": "8.44.7",
+    "@types/jest": "29.5.10",
+    "@types/node": "20.10.0",
     "cross-env": "7.0.3",
     "dotenv-cli": "7.3.0",
-    "eslint": "8.52.0",
+    "eslint": "8.54.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
-    "lint-staged": "15.0.2",
-    "prettier": "3.0.3",
+    "lint-staged": "15.1.0",
+    "prettier": "3.1.0",
     "rimraf": "5.0.5",
     "stylelint": "15.11.0",
-    "supabase": "1.110.1",
+    "supabase": "1.113.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "turbo": "1.10.16",
-    "typescript": "5.2.2"
+    "typescript": "5.3.2"
   },
   "pnpm": {
+    "overrides": {
+      "tailwind-variants": "0.1.17"
+    },
     "patchedDependencies": {
       "tailwind-variants@0.1.17": "patches/tailwind-variants@0.1.17.patch"
     }
