build: 📦️ 全ての依存関係をアップデート

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@lockerai/api",
   "version": "0.1.0",
-  "repository": "https://github.com/cardo-lockerai/lockerai.git",
-  "author": "dino3616 <85730998+dino3616@users.noreply.github.com>",
+  "repository": "https://github.com/nitic-pbl-p8/lockerai.git",
   "license": "MIT",
   "private": true,
   "type": "commonjs",
@@ -22,43 +21,41 @@
     "fmt:fix": "prettier --write .",
     "test": "cross-env NODE_ENV=test jest --silent=false --verbose false --passWithNoTests",
     "db:generate": "prisma generate --schema ./src/infra/prisma/schema.prisma",
-    "db:migrate": "dotenv -e .env.production -- cross-env NODE_ENV=production prisma migrate dev --schema ./src/infra/prisma/schema.prisma --name new_migration",
-    "db:deploy:dev": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma migrate deploy --schema ./src/infra/prisma/schema.prisma",
-    "db:deploy:prod": "dotenv -e .env.production -- cross-env NODE_ENV=production prisma migrate deploy --schema ./src/infra/prisma/schema.prisma",
+    "db:push:dev": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma db push --schema ./src/infra/prisma/schema.prisma",
+    "db:migrate": "dotenv -e .env.production -- cross-env NODE_ENV=production prisma migrate dev --schema ./src/infra/prisma/schema.prisma --name migration",
+    "db:migrate:sync": "supabase db diff -f migration",
+    "db:deploy:dev": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma migrate deploy --schema ./src/infra/prisma/schema.prisma && pnpm db:migrate:sync",
     "db:studio": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma studio --schema ./src/infra/prisma/schema.prisma",
     "apollo:rover": "rover graph publish lockerai@current --schema ./schema.gql"
   },
   "dependencies": {
-    "@apollo/server": "4.9.5",
+    "@apollo/server": "4.10.0",
     "@nestjs/apollo": "12.0.11",
-    "@nestjs/cli": "10.2.1",
-    "@nestjs/common": "10.2.10",
+    "@nestjs/cli": "10.3.0",
+    "@nestjs/common": "10.3.0",
     "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.10",
+    "@nestjs/core": "10.3.0",
     "@nestjs/graphql": "12.0.11",
-    "@nestjs/platform-express": "10.2.10",
-    "@nestjs/testing": "10.2.10",
-    "@prisma/client": "5.6.0",
+    "@nestjs/platform-express": "10.3.0",
+    "@nestjs/testing": "10.3.0",
+    "@prisma/client": "5.8.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dataloader": "2.2.2",
     "dotenv": "16.3.1",
     "graphql-subscriptions": "2.0.0",
     "graphql-validation-complexity": "0.4.2",
-    "ts-pattern": "5.0.5"
+    "ts-pattern": "5.0.6"
   },
   "devDependencies": {
-    "@apollo/rover": "0.21.0",
+    "@apollo/rover": "0.22.0",
     "@lockerai/jest": "workspace:*",
-    "@lockerai/postcss": "workspace:*",
     "@lockerai/prettier": "workspace:*",
-    "@lockerai/stylelint": "workspace:*",
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
-    "@nestjs/schematics": "10.0.3",
+    "@nestjs/schematics": "10.1.0",
     "@types/graphql-validation-complexity": "0.4.4",
-    "@types/pg": "8.10.9",
     "eslint-config-lockerai-node": "workspace:*",
-    "prisma": "5.6.0"
+    "prisma": "5.8.0"
   }
 }
