--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockerai/website",
   "version": "0.1.0",
-  "repository": "https://github.com/dino3616/lockerai.git",
+  "repository": "https://github.com/nitic-pbl-p8/lockerai.git",
   "license": "MIT",
   "private": true,
   "type": "module",
@@ -28,17 +28,17 @@
     "@lockerai/urql": "workspace:*",
     "@supabase/auth-helpers-nextjs": "0.8.7",
     "@supabase/auth-helpers-react": "0.4.2",
-    "@supabase/supabase-js": "2.38.5",
+    "@supabase/supabase-js": "2.39.3",
     "@urql/next": "1.1.0",
     "dotenv": "16.3.1",
-    "framer-motion": "10.16.5",
+    "framer-motion": "10.18.0",
     "graphql-tag": "2.12.6",
-    "next": "14.0.3",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "schema-dts": "1.1.2",
-    "sharp": "0.32.6",
-    "ts-pattern": "5.0.5"
+    "sharp": "0.33.1",
+    "ts-pattern": "5.0.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
@@ -53,9 +53,9 @@
     "@lockerai/stylelint": "workspace:*",
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
-    "@storybook/react": "7.5.3",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
+    "@storybook/react": "7.6.8",
+    "@types/react": "18.2.47",
+    "@types/react-dom": "18.2.18",
     "eslint-config-lockerai-nextjs": "workspace:*"
   }
 }
