--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lockerai",
   "version": "0.1.0",
-  "repository": "https://github.com/dino3616/lockerai.git",
+  "repository": "https://github.com/nitic-pbl-p8/lockerai.git",
   "license": "MIT",
   "private": true,
   "engines": {
@@ -21,23 +21,23 @@
     "website": "pnpm --filter @lockerai/website"
   },
   "devDependencies": {
-    "@types/eslint": "8.44.7",
-    "@types/jest": "29.5.10",
-    "@types/node": "20.10.0",
+    "@types/eslint": "8.56.2",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.11.0",
     "cross-env": "7.0.3",
     "dotenv-cli": "7.3.0",
-    "eslint": "8.54.0",
+    "eslint": "8.56.0",
     "husky": "8.0.3",
     "jest": "29.7.0",
-    "lint-staged": "15.1.0",
-    "prettier": "3.1.0",
+    "lint-staged": "15.2.0",
+    "prettier": "3.2.1",
     "rimraf": "5.0.5",
     "stylelint": "15.11.0",
-    "supabase": "1.113.3",
+    "supabase": "1.131.4",
     "ts-jest": "29.1.1",
-    "ts-node": "10.9.1",
-    "turbo": "1.10.16",
-    "typescript": "5.3.2"
+    "ts-node": "10.9.2",
+    "turbo": "1.11.3",
+    "typescript": "5.3.3"
   },
   "pnpm": {
     "overrides": {
