--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockerai/core",
   "version": "0.1.0",
-  "repository": "https://github.com/dino3616/lockerai.git",
+  "repository": "https://github.com/nitic-pbl-p8/lockerai.git",
   "license": "MIT",
   "private": true,
   "type": "module",
@@ -19,16 +19,16 @@
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-select": "2.0.0",
-    "date-fns": "2.30.0",
+    "date-fns": "3.2.0",
     "date-fns-tz": "2.0.0",
     "dotenv": "16.3.1",
-    "framer-motion": "10.16.5",
-    "next": "14.0.3",
+    "framer-motion": "10.18.0",
+    "next": "14.0.4",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.12.0",
-    "ts-pattern": "5.0.5"
+    "react-icons": "5.0.1",
+    "ts-pattern": "5.0.6"
   },
   "devDependencies": {
     "@lockerai/jest": "workspace:*",
@@ -36,9 +36,9 @@
     "@lockerai/prettier": "workspace:*",
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
-    "@storybook/react": "7.5.3",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
+    "@storybook/react": "7.6.8",
+    "@types/react": "18.2.47",
+    "@types/react-dom": "18.2.18",
     "eslint-config-lockerai-react": "workspace:*"
   }
 }
