--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockerai/prettier",
   "version": "0.1.0",
-  "repository": "https://github.com/dino3616/lockerai.git",
+  "repository": "https://github.com/nitic-pbl-p8/lockerai.git",
   "license": "MIT",
   "private": true,
   "main": "./index.cjs",
