--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lockerai/tsconfig",
   "version": "0.1.0",
-  "repository": "https://github.com/dino3616/lockerai.git",
+  "repository": "https://github.com/nitic-pbl-p8/lockerai.git",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -15,7 +15,7 @@
     "@tsconfig/create-react-app": "2.0.1",
     "@tsconfig/esm": "1.0.5",
     "@tsconfig/next": "2.0.1",
-    "@tsconfig/node-lts": "18.12.5",
+    "@tsconfig/node-lts": "20.1.1",
     "@tsconfig/strictest": "2.0.2",
     "eslint-config-lockerai-base": "workspace:*"
   }
