--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -35,7 +35,6 @@ file_size_limit = "50MiB"
 [auth]
 enabled = true
 site_url = "http://localhost:3000"
-additional_redirect_urls = ["https://localhost:3000"]
 jwt_expiry = 3600
 enable_refresh_token_rotation = true
 refresh_token_reuse_interval = 10
@@ -45,7 +44,7 @@ enable_signup = true
 enabled = true
 client_id = "env(SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID)"
 secret = "env(SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET)"
-url = "env(SUPABASE_AUTH_EXTERNAL_GOOGLE_URL)"
+redirect_uri = "http://localhost:54321/auth/v1/callback"
 
 [analytics]
 enabled = true
