--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,7 +22,7 @@
     "test": "cross-env NODE_ENV=test jest --silent=false --verbose false --passWithNoTests",
     "db:generate": "prisma generate --schema ./src/infra/prisma/schema.prisma",
     "db:push:dev": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma db push --schema ./src/infra/prisma/schema.prisma",
-    "db:migrate": "dotenv -e .env.production -- cross-env NODE_ENV=production prisma migrate dev --schema ./src/infra/prisma/schema.prisma --name migration",
+    "db:migrate:dev": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma migrate dev --schema ./src/infra/prisma/schema.prisma --name migration",
     "db:migrate:sync": "supabase db diff -f migration",
     "db:deploy:dev": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma migrate deploy --schema ./src/infra/prisma/schema.prisma && pnpm db:migrate:sync",
     "db:studio": "dotenv -e .env.development -- cross-env NODE_ENV=development prisma studio --schema ./src/infra/prisma/schema.prisma",
@@ -30,6 +30,10 @@
   },
   "dependencies": {
     "@apollo/server": "4.10.0",
+    "@huggingface/inference": "2.6.4",
+    "@langchain/community": "0.0.17",
+    "@langchain/core": "0.1.15",
+    "@langchain/openai": "0.0.12",
     "@nestjs/apollo": "12.0.11",
     "@nestjs/cli": "10.3.0",
     "@nestjs/common": "10.3.0",
@@ -39,13 +43,18 @@
     "@nestjs/platform-express": "10.3.0",
     "@nestjs/testing": "10.3.0",
     "@prisma/client": "5.8.0",
+    "@supabase/supabase-js": "2.39.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dataloader": "2.2.2",
     "dotenv": "16.3.1",
     "graphql-subscriptions": "2.0.0",
+    "graphql-upload": "15.0.2",
     "graphql-validation-complexity": "0.4.2",
-    "ts-pattern": "5.0.6"
+    "langchain": "0.1.3",
+    "ts-pattern": "5.0.6",
+    "uuid": "9.0.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@apollo/rover": "0.22.0",
@@ -54,7 +63,9 @@
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
     "@nestjs/schematics": "10.1.0",
+    "@types/graphql-upload": "15.0.2",
     "@types/graphql-validation-complexity": "0.4.4",
+    "@types/uuid": "9.0.7",
     "eslint-config-lockerai-node": "workspace:*",
     "prisma": "5.8.0"
   }
