--- a/packages/urql/package.json
+++ b/packages/urql/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@urql/core": "4.2.2",
     "@urql/devtools": "2.0.3",
+    "@urql/exchange-auth": "2.1.6",
     "@urql/next": "1.1.0",
     "date-fns": "3.2.0",
     "graphql": "16.8.1",
