--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -36,6 +36,7 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.49.3",
     "schema-dts": "1.1.2",
     "sharp": "0.33.1",
     "ts-pattern": "5.0.6"
