--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,16 +18,20 @@
     "@lockerai/tailwind": "workspace:*",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-popover": "1.0.7",
     "@radix-ui/react-select": "2.0.0",
     "date-fns": "2.30.0",
     "date-fns-tz": "2.0.0",
     "dotenv": "16.3.1",
     "framer-motion": "10.18.0",
+    "lucide-react": "0.312.0",
     "next": "14.0.4",
     "next-themes": "0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
     "react-icons": "5.0.1",
+    "sonner": "1.3.1",
     "ts-pattern": "5.0.6"
   },
   "devDependencies": {
